fix 日志页面xss :blush:

--- a/cmd/web/resource/static/css/gocd.css
+++ b/cmd/web/resource/static/css/gocd.css
@@ -54,14 +54,9 @@ a:hover {
 
 #console {
     background: black;
-    color: lightgreen;
     padding: 10px;
 }
 
 #console .line-number {
-    color: white;
-}
-
-#console .code {
-    padding-left: 3px;
+    color: green;
 }
